--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="profile" href="https://gmpg.org/xfn/11" />
 	<link rel="pingback" href="xmlrpc.html" />
-	<title>Katy &#8211; Kids Birthday Party Invitation Elementor Template Kit by Jegtheme</title>
+	<title>Evelyn Shresta</title>
 <link rel='dns-prefetch' href='http://s.w.org/' />
 <link rel="alternate" type="application/rss+xml" title="Katy &raquo; Feed" href="feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="Katy &raquo; Comments Feed" href="comments/feed/index.html" />
@@ -128,7 +128,7 @@ img.emoji {
 <li id="menu-item-1066" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1066 nav-item elementskit-mobile-builder-content" data-vertical-menu=750px><a href="gallery-2/index.html" class="ekit-menu-nav-link">Gallery</a></li>
 
 
-<li id="menu-item-12" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-12 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content" data-vertical-menu=750px><a class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Contact Us</a>
+<li id="menu-item-12" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-12 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content" data-vertical-menu=750px><a class="ekit-menu-nav-link ekit-menu-dropdown-toggle" href="contact-us-1/index.html">Contact Us</a>
 
 </li>
 
@@ -251,7 +251,7 @@ img.emoji {
 				</div>
 				<div class="elementor-element elementor-element-71ecf8d elementor-widget-mobile__width-inherit elementor-widget elementor-widget-text-editor" data-id="71ecf8d" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.</div>
+					<div class="elementor-text-editor elementor-clearfix">Little Evelyn Shresta is turning one. You are invited to have fun as we celebrate the day with family and friends</div>
 				</div>
 				</div>
 				<div class="elementor-element elementor-element-ff23fa0 elementor-widget elementor-widget-elementskit-social-media" data-id="ff23fa0" data-element_type="widget" data-widget_type="elementskit-social-media.default">
