--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ img.emoji {
 <link rel="alternate" type="text/xml+oembed" href="wp-json/oembed/1.0/embed0a18.html?url=https%3A%2F%2Ftemplatekit.jegtheme.com%2Fkaty%2F&amp;format=xml" />
 <style id="jeg_dynamic_css" type="text/css" data-type="jeg_custom-css"></style></head>
 
-<body class="home page-template page-template-elementor_header_footer page page-id-701 jkit-color-scheme ehf-header ehf-footer ehf-template-hello-elementor ehf-stylesheet-hello-elementor elementor-default elementor-template-full-width elementor-kit-17 elementor-page elementor-page-701">
+<body class="home page-template page-template-elementor_header_footer page page-id-701 jkit-color-scheme ehf-header ehf-footer ehf-template-hello-elementor ehf-stylesheet-hello-elementor elementor-default elementor-template-full-width elementor-kit-17 elementor-page elementor-page-701" oncontextmenu="return false;">
 <div id="page" class="hfeed site">
 
 		<header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader">
