--- a/gallery-2/index.html
+++ b/gallery-2/index.html
@@ -85,7 +85,7 @@ img.emoji {
 <link rel="alternate" type="text/xml+oembed" href="https://templatekit.jegtheme.com/katy/wp-json/oembed/1.0/embed?url=https%3A%2F%2Ftemplatekit.jegtheme.com%2Fkaty%2Fgallery-2%2F&#038;format=xml" />
 <style id="jeg_dynamic_css" type="text/css" data-type="jeg_custom-css"></style></head>
 
-<body class="page-template page-template-elementor_header_footer page page-id-1240 jkit-color-scheme ehf-header ehf-footer ehf-template-hello-elementor ehf-stylesheet-hello-elementor elementor-default elementor-template-full-width elementor-kit-17 elementor-page elementor-page-1240">
+<body class="page-template page-template-elementor_header_footer page page-id-1240 jkit-color-scheme ehf-header ehf-footer ehf-template-hello-elementor ehf-stylesheet-hello-elementor elementor-default elementor-template-full-width elementor-kit-17 elementor-page elementor-page-1240" oncontextmenu="return false;">
 <div id="page" class="hfeed site">
 
 		<header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader">
