--- a/contact-us-1/index.html
+++ b/contact-us-1/index.html
@@ -73,7 +73,7 @@ img.emoji {
 <link rel="alternate" type="text/xml+oembed" href="https://templatekit.jegtheme.com/katy/wp-json/oembed/1.0/embed?url=https%3A%2F%2Ftemplatekit.jegtheme.com%2Fkaty%2Fcontact-us-1%2F&#038;format=xml" />
 <style id="jeg_dynamic_css" type="text/css" data-type="jeg_custom-css"></style></head>
 
-<body class="page-template page-template-elementor_header_footer page page-id-1161 jkit-color-scheme ehf-header ehf-footer ehf-template-hello-elementor ehf-stylesheet-hello-elementor elementor-default elementor-template-full-width elementor-kit-17 elementor-page elementor-page-1161">
+<body class="page-template page-template-elementor_header_footer page page-id-1161 jkit-color-scheme ehf-header ehf-footer ehf-template-hello-elementor ehf-stylesheet-hello-elementor elementor-default elementor-template-full-width elementor-kit-17 elementor-page elementor-page-1161" oncontextmenu="return false;">
 <div id="page" class="hfeed site">
 
 		<header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader">
